--- a/notebooks/02-preprocesado.ipynb
+++ b/notebooks/02-preprocesado.ipynb
@@ -715,7 +715,160 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ehr</th>\n",
+       "      <th>pregnancy</th>\n",
+       "      <th>birth</th>\n",
+       "      <th>caesarean</th>\n",
+       "      <th>abort</th>\n",
+       "      <th>menarche_age</th>\n",
+       "      <th>menopause_age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10011773</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10030299</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10030824</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10053435</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10111454</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10115313</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>10119160</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>48.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>10128601</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10131227</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10136878</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ehr  pregnancy  birth  caesarean  abort  menarche_age  menopause_age\n",
+       "0  10011773        NaN    0.0        NaN    0.0           NaN           71.0\n",
+       "1  10030299        3.0    3.0        0.0    0.0           NaN            NaN\n",
+       "2  10030824        0.0    0.0        0.0    0.0           NaN           44.0\n",
+       "3  10053435        2.0    1.0        0.0    1.0          21.0           74.0\n",
+       "4  10111454        0.0    0.0        0.0    0.0          16.0           55.0\n",
+       "5  10115313        2.0    0.0        0.0    2.0          18.0           44.0\n",
+       "6  10119160        1.0    1.0        0.0    0.0          15.0           48.0\n",
+       "7  10128601        3.0    3.0        0.0    0.0          14.0           53.0\n",
+       "8  10131227        7.0    7.0        0.0    0.0          12.0            NaN\n",
+       "9  10136878       15.0    5.0       10.0    0.0          10.0            NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def impute_births(row):\n",
     "\n",
@@ -755,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +917,7 @@
        "<AxesSubplot:xlabel='menopause_age', ylabel='Count'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -785,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +1142,7 @@
        "9  10099117      True  77.0      77.0  Senior +        NaN    NaN        NaN    NaN           NaN            NaN"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1014,15 +1167,15 @@
       "WARNING:root:Hay     3 con la edad de la primera menstruación con valor negativo. Se han eliminado. \n",
       "WARNING:root:Hay   155 con la edad de la primera menstruación con valor superior al umbral de 18.5. Se han eliminado. \n",
       "WARNING:root:Hay   326 con con la edad de la primera menstruación mayor a su propia edad. Se han eliminado\n",
-      "WARNING:root:Hay   326 con con la edad de la menopausía mayor a su propia edad. Se han eliminado\n",
-      "WARNING:root:Hay     1 con la edad de la primera menstruación con valor negativo. Se han eliminado. \n",
-      "WARNING:root:Hay    75 con la edad de la primera menstruación con valor superior al umbral de 18.5. Se han eliminado. \n"
+      "WARNING:root:Hay   326 con con la edad de la menopausía mayor a su propia edad. Se han eliminado\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "WARNING:root:Hay     1 con la edad de la primera menstruación con valor negativo. Se han eliminado. \n",
+      "WARNING:root:Hay    75 con la edad de la primera menstruación con valor superior al umbral de 18.5. Se han eliminado. \n",
       "WARNING:root:Hay   144 con con la edad de la primera menstruación mayor a su propia edad. Se han eliminado\n",
       "WARNING:root:Hay   144 con con la edad de la menopausía mayor a su propia edad. Se han eliminado\n"
      ]
@@ -1298,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1478,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1655,7 @@
        "<AxesSubplot:xlabel='ki67', ylabel='Count'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1523,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1968,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +2132,7 @@
        "Name: neoadjuvant, dtype: Int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2166,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2024,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2033,7 +2186,7 @@
        "<AxesSubplot:xlabel='m_category', ylabel='count'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2061,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2494,7 +2647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2927,7 +3080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2936,7 +3089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2973,7 +3126,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2984,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2995,7 +3148,7 @@
        "Name: neoadjuvant, dtype: Int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3006,7 +3159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
