restored deleted files

--- a/notebooks/04-models.ipynb
+++ b/notebooks/04-models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "9  10085060      True  67.0      76.0  Senior +        NaN    NaN        NaN    NaN           NaN            NaN      1.0          0         1.0       False                       1                      0.0                     True             IIA              IA    2.0    True    False         True   True  False  0.14   <NA>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1276,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,8 +1313,8 @@
     "\n",
     "    # Tumor\n",
     "    df['n_tumor'] = df['n_tumor'].fillna(1)\n",
-    "    df['ductal'] = df['ductal'].fillna(1)\n",
-    "    df['lobular'] = df['lobular'].fillna(0)\n",
+    "    df['ductal'] = df['ductal'].fillna(True)\n",
+    "    df['lobular'] = df['lobular'].fillna(False)\n",
     "\n",
     "\n",
     "    # Nomenclatura TNM: eliminar redundancia\n",
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,11 @@
     "\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import GridSearchCV\n"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "from pickle import dump, load\n"
    ]
   },
   {
@@ -1376,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1916,14 +1920,14 @@
        "4  61.0      73.0        1.0    1.0        0.0    0.0          15.0           48.0      1.0         3.0         1.0         0.0                      3.0                      2.0                      0.0    1.0     1.0      0.0  0.0   1.0  0.52  0.0"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# upsample\n",
-    "smote = SMOTE(sampling_strategy = 0.5, random_state = 10101)\n",
+    "smote = SMOTE(sampling_strategy = 1, random_state = 10101)\n",
     "X = X.astype(float)\n",
     "up_x, up_y = smote.fit_resample(X, Y)\n",
     "up_x.head()"
@@ -1931,15 +1935,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train shape: (4204, 22)\n",
-      "test  shape: (1052, 22)\n"
+      "train shape: (5606, 22)\n",
+      "test  shape: (1402, 22)\n"
      ]
     }
    ],
@@ -1951,22 +1955,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.5]\n",
+      "[0.05]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.58      0.25      0.35       360\n",
-      "         1.0       0.70      0.90      0.79       692\n",
+      "       False       0.60      0.60      0.60       689\n",
+      "        True       0.61      0.61      0.61       713\n",
       "\n",
-      "    accuracy                           0.68      1052\n",
-      "   macro avg       0.64      0.58      0.57      1052\n",
-      "weighted avg       0.66      0.68      0.64      1052\n",
+      "    accuracy                           0.60      1402\n",
+      "   macro avg       0.60      0.60      0.60      1402\n",
+      "weighted avg       0.60      0.60      0.60      1402\n",
       "\n"
      ]
     }
@@ -1983,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2014,12 +2018,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.64      0.17      0.27       360\n",
-      "         1.0       0.69      0.95      0.80       692\n",
+      "       False       0.64      0.60      0.62       689\n",
+      "        True       0.64      0.67      0.65       713\n",
       "\n",
-      "    accuracy                           0.68      1052\n",
-      "   macro avg       0.66      0.56      0.53      1052\n",
-      "weighted avg       0.67      0.68      0.62      1052\n",
+      "    accuracy                           0.64      1402\n",
+      "   macro avg       0.64      0.64      0.64      1402\n",
+      "weighted avg       0.64      0.64      0.64      1402\n",
       "\n"
      ]
     }
@@ -2032,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2040,7 +2044,7 @@
      "output_type": "stream",
      "text": [
       "Fitting 10 folds for each of 20 candidates, totalling 200 fits\n",
-      "{'max_depth': 5, 'n_estimators': 200}\n"
+      "{'max_depth': 5, 'n_estimators': 450}\n"
      ]
     }
    ],
@@ -2054,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2063,12 +2067,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.99      0.58      0.73       360\n",
-      "         1.0       0.82      1.00      0.90       692\n",
+      "       False       0.99      0.91      0.95       689\n",
+      "        True       0.92      0.99      0.95       713\n",
       "\n",
-      "    accuracy                           0.85      1052\n",
-      "   macro avg       0.90      0.79      0.81      1052\n",
-      "weighted avg       0.88      0.85      0.84      1052\n",
+      "    accuracy                           0.95      1402\n",
+      "   macro avg       0.95      0.95      0.95      1402\n",
+      "weighted avg       0.95      0.95      0.95      1402\n",
       "\n"
      ]
     }
@@ -2076,7 +2080,89 @@
    "source": [
     "random_forest = grid.best_estimator_\n",
     "y_pred = random_forest.predict(x_test)\n",
-    "print(classification_report(y_test, y_pred))"
+    "print(classification_report(y_test, y_pred))\n",
+    "with  open('../models/random-2-89.sav', 'wb') as file:\n",
+    "    dump(random_forest, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.71      0.75      0.73       689\n",
+      "        True       0.75      0.70      0.72       713\n",
+      "\n",
+      "    accuracy                           0.73      1402\n",
+      "   macro avg       0.73      0.73      0.73      1402\n",
+      "weighted avg       0.73      0.73      0.73      1402\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_model = BernoulliNB()\n",
+    "nb_model = nb_model.fit(x_train, y_train)\n",
+    "y_pred = nb_model.predict(x_test)\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 18 candidates, totalling 54 fits\n",
+      "{'learning_rate': 0.03, 'max_depth': 5, 'n_estimators': 500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgb_model =  XGBClassifier()\n",
+    "params = dict(n_estimators = np.arange(150, 551, 50), max_depth=[1, 5, 10], learning_rate = [0.03], )\n",
+    "grid = GridSearchCV(xgb_model, params, cv = 3, verbose = 10, n_jobs=3, refit = True)\n",
+    "grid = grid.fit(x_train, y_train)\n",
+    "print(grid.best_params_)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.99      0.91      0.95       689\n",
+      "        True       0.92      0.99      0.95       713\n",
+      "\n",
+      "    accuracy                           0.95      1402\n",
+      "   macro avg       0.95      0.95      0.95      1402\n",
+      "weighted avg       0.95      0.95      0.95      1402\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgb_model = grid.best_estimator_\n",
+    "y_pred = xgb_model.predict(x_test)\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "with  open('../models/xgb-2-95.sav', 'wb') as file:\n",
+    "    dump(random_forest, file)"
    ]
   }
  ],
